--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
       crossorigin="anonymous"
     />
 
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <title>AID Platform App</title>
