--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>AID Platform App</title>
+    <title>AID Platform</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
